responsive updates/mobile / stripe

--- a/stripe-clone/src/index.css
+++ b/stripe-clone/src/index.css
@@ -6,7 +6,8 @@
   font-family: "sohne-var", "Helvetica Neue", "Arial", sans-serif;
 }
 
-.app {
+.App {
   position: relative;
+  overflow: hidden;
 }
 /*# sourceMappingURL=index.css.map */
