--- a/stripe-clone/src/index.scss
+++ b/stripe-clone/src/index.scss
@@ -5,8 +5,9 @@
   font-family: "sohne-var", "Helvetica Neue", "Arial", sans-serif;
 }
 
-.app {
+.App {
   position: relative;
+  overflow: hidden;
 }
 
 
